# NKU_SpeechInformationProcessing_2026_Homework

./: .gitignore  README.md
Hw1/: exp1_2026.ipynb
Hw2/: lab2.ipynb
Hw3/: test.py  utils.py
Hw4/: tts_homework_1.ipynb  tts_homework_2.ipynb  tts_homework_3.ipynb
Hw5/: 01_setup.ipynb  02.py  02_speaker_embedding.ipynb  03.py  03_asv_asi.ipynb  pyproject.toml
