[project]
name = "lab5-speaker-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub",
    "ipykernel",
    "matplotlib>=3.10.9",
    "pandas",
    "scikit-learn>=1.7.2",
    "speechbrain",
    "torch",
    "torchaudio",
    "torchcodec",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
speechbrain = { path = "speechbrain", editable = true }
